--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -1,89 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/adverb1"
-        android:text="adverb" />
+        android:text="@string/title2"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:padding="20dp"
+        android:id="@+id/textView2" />
 
-    <EditText
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="315dp"
+        android:columnCount="2"
+        android:rowCount="7"
+        android:padding="15dp"
+        android:orientation="horizontal"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.44">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/adverb1"
+            android:text="adverb" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/number1"
+            android:text="number" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nounMV1"
+            android:text="plural noun" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verb1"
+            android:text="verb" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bodypart"
+            android:text="bodypart" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verb2"
+            android:text="verb" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/adverb2"
+            android:text="adverb" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nounMV2"
+            android:text="plural noun" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nounMV3"
+            android:text="plural noun" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nounMV4"
+            android:text="plural noun" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/funnynoise"
+            android:text="funny noise" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verb3"
+            android:text="verb" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/number2"
+            android:text="number" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verb4"
+            android:text="verb" />
+    </GridLayout>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/number1"
-        android:text="number" />
+        android:text="Go make my story!"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="15dp"
+        android:id="@+id/button2"
+        android:layout_gravity="center_horizontal|bottom" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nounMV1"
-        android:text="noun + plural" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verb1"
-        android:text="verb" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bodypart"
-        android:text="bodypart" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verb2"
-        android:text="verb" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/adverb2"
-        android:text="adverb" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nounMV2"
-        android:text="noun + plural" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nounMV3"
-        android:text="noun + plural" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nounMV4"
-        android:text="noun + plural" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/funnynoise"
-        android:text="funny noise" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verb3"
-        android:text="verb" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/number2"
-        android:text="number" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verb4"
-        android:text="verb" />
 </LinearLayout>
