--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -11,7 +11,8 @@
         android:textStyle="bold"
         android:textSize="24sp"
         android:padding="20dp"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:textAlignment="center" />
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -20,7 +21,6 @@
         android:rowCount="7"
         android:padding="15dp"
         android:orientation="horizontal"
-        android:textAlignment="center"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.44">
 
@@ -112,11 +112,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go make my story!"
+        android:text="@string/go"
         android:textStyle="bold"
         android:textSize="20sp"
         android:padding="15dp"
         android:id="@+id/button2"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:onClick="GomakemystoryClick" />
 
 </LinearLayout>
