--- a/app/src/main/res/layout/content_start.xml
+++ b/app/src/main/res/layout/content_start.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_start" tools:context=".Start">
+    tools:showIn="@layout/activity_start" tools:context=".Start"
+    android:background="#e7190e">
 
     <ImageView
         android:layout_width="wrap_content"
