--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#e7190e">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.rosanne.madlibs.choosestory"
+    android:background="@drawable/achtergr">
 
     <TextView
+        android:text="@string/storytitle"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/storytitle"
-        android:id="@+id/textView4"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="24sp" />
+        android:layout_marginBottom="20dp"
+        android:id="@+id/textView"
+        android:textColor="#550c59" />
 
-    <TextView
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/story"
-        android:id="@+id/textView3"
-        android:layout_gravity="center"
-        android:textColor="#550c59"
-        android:textSize="20sp"
-        android:layout_weight="10"
-        android:textAlignment="center" />
+        android:layout_height="290dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/storyviewer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="placertext"
+            android:layout_alignTop="@+id/textView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textColor="#550c59" />
+    </ScrollView>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/make"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:padding="15dp"
-        android:id="@+id/buttonAgain"
-        android:layout_gravity="center_horizontal|bottom"
-        android:onClick="AgainClick" />
+        android:text="Make another story!"
+        android:id="@+id/restart"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="anotherstoryClick" />
 
-</LinearLayout>
+</RelativeLayout>
