--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -1,106 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1"
-    android:background="#e7190e">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.rosanne.madlibs.choosestory"
+    android:background="@drawable/achtergr">
+
+    <TextView android:text="@string/fillin" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/storynum"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#550c59"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:inputType="text"
+            android:textColor="#550c59" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="enter word"
+            android:onClick="inputWord"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:id="@+id/relativeLayout">
+
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title2"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:padding="20dp"
-        android:id="@+id/textView2"
-        android:textAlignment="center" />
+        android:id="@+id/placeholders"
+        android:textSize="20sp"
+        android:text="@string/placeholders"
+        android:textColor="#550c59"
+        android:padding="5dp"
+        android:layout_alignBaseline="@+id/relativeLayout"
+        android:layout_alignBottom="@+id/relativeLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="315dp"
-        android:columnCount="2"
-        android:rowCount="7"
-        android:padding="15dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.44">
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/aDvErB"
-            android:text="adverb" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/NUMBER"
-            android:text="number" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Plural_Noun"
-            android:text="plural noun" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/body_part"
-            android:text="bodypart" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/verb"
-            android:text="verb" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/adverb"
-            android:text="adverb" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pluRAL_nOUN"
-            android:text="plural noun" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/plural_noun"
-            android:text="plural noun" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/FUNNY_noise"
-            android:text="funny noise" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Number"
-            android:text="number" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/verB"
-            android:text="verb" />
-    </GridLayout>
-
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go"
-        android:textStyle="bold"
+        android:id="@+id/wordscount"
         android:textSize="20sp"
-        android:padding="15dp"
-        android:id="@+id/button2"
-        android:layout_gravity="center_horizontal|bottom"
-        android:onClick="GomakemystoryClick" />
+        android:padding="5dp"
+        android:text="@string/placeholderscount"
+        android:textColor="#550c59"
+        android:layout_above="@+id/placeholders"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
+
+</RelativeLayout>
