--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -81,5 +81,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:background="@android:drawable/presence_audio_online"
+        android:minHeight="50dp"
+        android:minWidth="50dp"
+        android:nestedScrollingEnabled="false"
+        android:onClick="talkToTextClick"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
