--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -23,9 +23,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="290dp"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/restart"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView">
 
         <TextView
             android:id="@+id/storyviewer"
